# spaceship-py

./: README.md  setup.cfg  spaceship.py
.github/workflows/: publish-to-test-pypi.yml
src/spaceship-py/: tests.py
