[metadata]
name = spaceship-py
version = 0.0.2
author = Angelo Erasmo
author_email = angelo1erasmo@gmail.com
description = Spaceship operator from PHP. Implemented in python (poorly)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aerasmo/spaceship-py
project_urls =
    Bug Tracker = https://github.com/aerasmo/spaceship-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
